crates/pyxray-render/tests/snapshots/snapshots__mono-line.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: text
---
### 100 .>X ~$e ! .... ..  reads the environment -> makes 2 network calls -> DELETES /t~  sketchy.py
