crates/pyxray-render/tests/snapshots/snapshots__paper-card.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: text
---

 ──────────────────────────────────────────────────────────────────────────────────────────────────
 pyxray  sketchy.py                               21 lines · 16 statements · depth 2 · cyclomatic 2
 reads the environment → makes 2 network calls → DELETES /tmp/stage → evaluates code at runtime (+…
 risk ██████████████████  100  read it first                                      ·▸× ≈»§ ‡ ···· ¶·

 CAPABILITIES
 ──────────────────────────────────────────────────────────────────────────────────────────────────
  ≈ net 2!   § env 2!   » shell 2!   × delete 1!   ‡ eval 1!   ▸ write 3   ¶ print 1

 TEXTURE
 ──────────────────────────────────────────────────────────────────────────────────────────────────
 ▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▄▄▄▄▄█████▄▄▄▄▄····▂▂▂▂▂▂▂▂▂▂▂▂▂▂
               !!!!!         !!!!!▸▸▸▸▸    !!!!!    !!!!!         ▸▸▸▸▸▸▸▸▸!!!!!!    !!!!!!!!!!¶¶¶¶

 WHAT IT DOES
 ──────────────────────────────────────────────────────────────────────────────────────────────────
    4 ! § getenv   API_TOKEN                                  ! reads a secret from the environment
    7 ! × rmtree   /tmp/stage                     ! recursively deletes a directory; ignore_errors…
    8   ▸ mkdir    /tmp/stage
   10 ! ≈ GET      https://example.invalid/payload! verify=False — TLS certificates are not checked
   12 ! ‡ unpickle pickle.loads                                    ! unpickling runs arbitrary code
   15 · ▸ truncate f"{STAGING}/{name}.sh"
   16 · ▸ write    open(f"{STAGING}/{name}.sh", "w")
   17 ! » run      f"bash {STAGING}/{name}.sh"    ! runs an external command; shell=True — the arg…
   19 ! ≈ POST     https://example.invalid/report                     ! sends data to a remote host
   19   § probe    os.uname
   20 ! » run      ["rm", "-rf", STAGING]              ! runs an external command; recursive delete
   21   ¶ print    done
